# flurpilot-core

./: .env.example  .gitignore  AGENTS.md  README.md  opencode_help.txt  package-lock.json  package.json  vercel.json
FlurPilot-Core/: .gitignore  Caddyfile  DEPLOY.md  LICENSE_REPORT.md  Makefile  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  provision.ps1  review_report.md  test_privacy_output.txt
FlurPilot-Core/apps/worker/: Dockerfile  ai_client.py  audit_logger.py  bavarian_bypass.py  check_data.py  check_index.py  clear_jobs.py  debug_rpc.py  debug_search.py  fetcher.py  fix_rls.py  harvest_test.py  job_queue.py  list_models.py  main.py  mock_data.py  models.txt  pdf_processor.py  privacy.py  pyproject.toml  requirements.txt  seed_germany.py  seed_munich.py  seed_parcel_job.py  seed_profiles.py  source_selector.py  test_bypass.py  test_geo.py  test_openrouter.py  test_privacy.py  test_sessionnet.py  test_url.py  verify_parcel.py
FlurPilot-Core/apps/worker/connectors/: BING_SEARCH_README.md  bing_search.py  brave_search.py  oparl.py  search_index.py  sessionnet.py
FlurPilot-Core/apps/worker/scripts/: check_data_v2.py  check_licenses.py  run_bavarian_bypass.py  seed_demo_data.py  test_privacy_pipeline.py  test_streaming.py  verify_audit_log.py  verify_wfs_parsing.py
FlurPilot-Core/apps/worker/services/: email_service.py
FlurPilot-Core/apps/worker/tests/: test_bing_search.py  test_brave_search.py  test_email_live.py  test_phoenix.py  test_smoke.py
scripts/: generate-keywords.py  generate-sitemap.js
(+91 files in other folders)
